# TuneHub

./: .coverage  .dockerignore  .env.example  .gitignore  README.md  experiment.py  main.py  pyproject.toml  pytest.ini
app/: config.py  main.py
app/agents/: graph.py  state.py
app/api/v1/routes/: feedback.py  health.py  recommend.py
app/api/v1/schemas/: request.py  responce.py
app/data/: mock_data.json
app/memory/: semantic.py  session.py
app/tools/: mood_analyser.py  music_search.py  playlist_builder.py
docker/: Dockerfile  docker-compose.yml
experiments/: eval_20260405_104255.csv
tests/: conftest.py
tests/evals/: eval_playlist.py  test_eval_playlist.py
tests/simulations/: test_agent_flows.py
tests/unit/: test_api.py  test_schemas.py  test_tools.py
