[project]
name = "TuneHub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.2",
    "langsmith>=0.7.18",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "redis>=7.3.0",
    "ruff>=0.15.6",
    "sentence-transformers>=5.3.0",
    "uvicorn[standard]>=0.42.0",
]
